# Qt-Qml-Frameless-Window-Chrome

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp
application/: Application.h
core/: CMakeLists.txt
core/controllers/captioncontroller/: CaptionController.cpp  captionController.h
core/controllers/windowcontroller/: WindowController.cpp  WindowController.h
core/domain/: WindowConstants.h
core/platform/: BaseWindow.cpp  BaseWindow.h  IPlatform.h
core/platform/linuxplatform/: LinuxPlatform.cpp  LinuxPlatform.h
core/platform/linuxplatform/utils/: LinuxUtils.cpp  LinuxUtils.h
core/platform/macplatform/: MacPlatform.h  MacPlatform.mm
core/platform/macplatform/utils/: MacUtils.cpp  MacUtils.h
core/platform/windowsplatform/: WindowsPlatform.cpp  WindowsPlatform.h
core/platform/windowsplatform/utils/: WindowsUtils.cpp  WindowsUtils.h
core/qml/appchrome/appcaption/linux/: DefaultAppCaption.qml
example/: CMakeLists.txt  Main.qml  main.cpp
example/qml/customcaption/: CustomCaption.qml
example/qml/customcaption/qml/appmainwindow/appcaption/: BaseCaption.qml
example/qml/customcaption/qml/appmainwindow/appcaption/mac/: DefaultAppCaption.qml
example/qml/customcaption/qml/tests/: CustomCaption.qml
example/qml/customcaption/qml/tests/controls/: CustomCaptionButton.qml
example/qml/customcaption/qml/views/: AppChrome.qml
platform/ui/appmainwindow/: AppMainWindow.h
platform/ui/appmainwindow/appcaption/: AppCaption.cpp  AppCaption.h
platform/ui/appmainwindow/appwindowcontroller/: AppWindowController.cpp  AppWindowController.h
platform/ui/appmainwindow/linux/: LinuxPlatform.cpp
platform/ui/appmainwindow/mac/: MacPlatform.cpp  MacPlatform.mm
platform/ui/appmainwindow/windows/: WindowsPlatform.cpp
platform/ui/appmainwindow/windows/utils/: utils.h
qml/appmainwindow/appcaption/: AppCaption.qml  AppCaption.qml.autosave
qml/appmainwindow/controls/buttons/: CaptionButton.qml
qml/views/: AppChrome.qml
